crates/oxc_css/tests/error/scss/at-rule/mixin/unterminated.snap
---
source: crates/oxc_css/tests/error.rs
---
error: expect token `$var`, but found `{`
  ┌─ unterminated.scss:1:35
  │
1 │ @mixin missing-paren-error($a,$b, {
  │                                   ^


